--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'org.jetbrains.anko:anko:0.10.1'
     compile 'org.jetbrains.anko:anko-sqlite:0.10.1'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
