--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </activity>
         <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.particulars.ParticularsActivity" />
-        <activity android:name=".ui.download.DownloadActivity"></activity>
+        <activity android:name=".ui.download.DownloadActivity" />
     </application>
 
 </manifest>
