--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.particulars.ParticularsActivity" />
         <activity android:name=".ui.download.DownloadActivity" />
+        <activity android:name=".ui.search.SearchActivity"></activity>
     </application>
 
 </manifest>
