--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".ui.download.DownloadActivity" />
         <activity android:name=".ui.search.SearchActivity" />
         <activity android:name=".ui.about.AboutActivity" />
+        <activity android:name=".ui.set.SetActivity"></activity>
     </application>
 
 </manifest>
