--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,13 @@ android {
         applicationId "com.marvin.splashedinkkotlin"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 5
-        versionName "1.0.5"
+        versionCode 7
+        versionName "1.0.7"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi', 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
     }
     buildTypes {
         release {
@@ -21,7 +25,7 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file("C:\\Users\\mapw\\Marvin's.jks")
+            storeFile file("C:\\Users\\Marvin\\Marvin's.jks")
             storePassword "274226"
             keyAlias "marvin"
             keyPassword "274226"
@@ -81,9 +85,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'zlc.season:rxdownload3:1.2.0'
     implementation 'com.pacioianu.david:ink-page-indicator:1.2.0'
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.4'
+    implementation 'com.tencent.bugly:nativecrashreport:3.3.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
     kapt 'com.github.bumptech.glide:compiler:4.4.0'
 }
