--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,16 +42,16 @@ android {
             // 配置混淆
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
         }
 
-        android.applicationVariants.all { variant ->
-            variant.outputs.all  {
-                variant.getPackageApplication().outputDirectory = new File("/Users/mapuwen/Downloads")
-
-                outputFileName = "${project.name}_${defaultConfig.versionName}_${variant.buildType.name}.apk"
-            }
-        }
+//        android.applicationVariants.all { variant ->
+//            variant.outputs.all  {
+//                variant.getPackageApplication().outputDirectory = new File("/Users/mapuwen/Downloads")
+//
+//                outputFileName = "${project.name}_${defaultConfig.versionName}_${variant.buildType.name}.apk"
+//            }
+//        }
     }
 
     sourceSets {
