--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //noinspection GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.0.1'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
     //noinspection GradleCompatible
     implementation 'com.google.android.material:material:1.0.0'
@@ -103,6 +103,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
 }
 repositories {
     mavenCentral()
