--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,28 +19,31 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    signingConfigs {
-        release {
-            storeFile file("/Users/mapuwen/StudioProjects/SplashedInkKotlin/key/Marvin's.jks")
-            storePassword "274226"
-            keyAlias "marvin"
-            keyPassword "274226"
-        }
-    }
+//    signingConfigs {
+//        release {
+//            storeFile file("/Users/mapuwen/StudioProjects/SplashedInkKotlin/key/Marvin's.jks")
+//            storePassword "274226"
+//            keyAlias "marvin"
+//            keyPassword "274226"
+//        }
+//    }
     buildTypes {
         debug {
             // 配置混淆
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 //            signingConfig signingConfigs.release
         }
         release {
             // 配置混淆
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 //            signingConfig signingConfigs.release
         }
@@ -77,7 +80,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //noinspection GradleCompatible
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     //noinspection GradleCompatible
     implementation 'com.google.android.material:material:1.0.0'
     //noinspection GradleCompatible
@@ -100,8 +103,8 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.5'
     implementation 'com.tencent.bugly:nativecrashreport:3.3.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
 }
