--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,17 +4,17 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.marvin.splashedinkkotlin"
         minSdkVersion 27
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 9
         versionName "1.0.9"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         ndk {
             // 设置支持的SO库架构
-            abiFilters 'armeabi', 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+            abiFilters 'armeabi', 'armeabi-v7a'
         }
     }
     buildTypes {
@@ -80,6 +80,8 @@ android {
 }
 
 dependencies {
+    def room_version = "2.2.5"
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('androidx.test.espresso:espresso-core:3.2.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -88,9 +90,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //noinspection GradleCompatible
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta8'
     //noinspection GradleCompatible
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     //noinspection GradleCompatible
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -109,12 +111,19 @@ dependencies {
     implementation 'zlc.season:rxdownload3:1.3.4'
     implementation 'com.pacioianu.david:ink-page-indicator:1.3.0'
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.9'
-    implementation 'com.tencent.bugly:nativecrashreport:3.6.0.1'
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
+
+    // https://mvnrepository.com/artifact/androidx.room/room-ktx
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+    releaseImplementation 'com.idescout.sql:sqlscout-server-noop:4.1'
 }
 repositories {
     mavenCentral()
